--- a/random-quote-gen/src/index.css
+++ b/random-quote-gen/src/index.css
@@ -8,53 +8,84 @@
 }
 
 body {
-  background-color: pink;
+  background-color: lightpink;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw;
   height: 100vh;
+  transition: background-color 0.5s ease; 
 }
 
 #wrapper {
-  background-color: white;
+  background-color: rgba(23, 22, 22, 0.75);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 2.5rem 0;
+  border-radius: 0.25rem;
 }
 
 #text {
-  background-color: aquamarine;
   margin: 0 auto;
-  width: 24rem;
-  height: 14rem;
+  padding: 1rem;
+  width: 32rem;
+  font-size: 1.75rem;
+  color: rgb(110, 110, 110);
 }
 
 #author {
-  background-color: rgb(42, 184, 137);
-  margin: 0 auto;
+  margin-left: 8rem;
+  padding: 0.5rem 0 2rem;
   width: 24rem;
-  height: 4rem;
+  font-size: 1rem;
+  text-align: right;
+  color: rgb(133, 131, 131);
+}
+
+#text, #author {
+  transition: color 0.5s ease;
 }
 
 .buttons {
-  padding: 2.5rem 3rem 2.5rem;
+  padding: 0 3rem 0;
 }
 
 .button {
+  color: black;
   padding: 0.6rem;
+  border-radius: 0.25rem;
+  transition: background-color 0.5s ease;
+  font-weight: 500;
 }
 
-a {
-  background-color: purple;
-  margin-right: 23rem;
+.buttons > a {
+  margin-right: 21rem;
 }
 
 a > img {
   transform: translateY(0.125rem);
+  filter: brightness(0) saturate(100%);
 }
 
 div > button {
-  background-color: purple;
+  background-color: rgb(249, 65, 93);
   transform: translateY(-0.05rem);
-  color: white;
   border: none;
   height: 2.35rem;
+  font-size: 1rem;
+  color: white;
+}
+
+footer {
+  font-size: 0.4rem;
+  margin-top: 1rem;
+  text-align: center;
+  width: 100%;
+}
+
+footer > h1 > a {
+  color: rgba(21, 19, 19, 0.75);
+  text-decoration: none;
+  font-weight: 500;
 }
