--- a/random-quote-gen/src/index.css
+++ b/random-quote-gen/src/index.css
@@ -8,7 +8,6 @@
 }
 
 body {
-  background-color: lightpink;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,8 +21,10 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   padding: 2.5rem 0;
   border-radius: 0.25rem;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, .25);
 }
 
 #text {
