--- a/javascript-calculator/src/App.css
+++ b/javascript-calculator/src/App.css
@@ -5,7 +5,7 @@
 }
 
 .App {
-  background-color: rgb(110, 118, 110);
+  background-color: rgb(172, 172, 172);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,32 +13,40 @@
   height: 100vh;
 }
 
-.history {
-  background-color: rgb(47, 47, 47);
-  grid-column: 1 / 5;
-  color: white;
-}
-
 .calculator {
   background-color: black;
+  border: 5px solid black;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  margin: 8rem 0;
 }
 
 .calculator > * {
-  border: 0.06rem solid black;
-  background-color: rgb(47, 47, 47);
-  color: white;
+  background-color: rgb(105, 100, 100);
+  border: 0.01rem solid black;
   padding: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-weight: 500;
+  font-weight: 700;
+  font-size: 1.15rem;
+}
+
+#results {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  grid-column: 1 / 5;
+  height: 5rem;
+  overflow: hidden;
+}
+
+#history {
+  color: rgb(255, 200, 0);
 }
 
 #display {
-  grid-column: span 4;
+  color: white;
   justify-content: right;
 }
 
@@ -52,4 +60,14 @@
 
 #equals {
   grid-row: span 2;
+}
+
+.button.active {
+  background-color: white;
+  color: black;
+}
+
+.row.active {
+  background-color: white;
+  color: black;
 }
